# table-bookings

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
office/templates/office/: common.html
office/templatetags/: permission_tags.py
office/views/: booking.py  main.py  permission.py  restaurant.py
table-bookings/config/: configs.py  middleware.py  settings.py  urls.py
table-bookings/office/: models.py  urls.py
table-bookings/office/migrations/: 0001_initial.py
table-bookings/web/: forms.py  models.py  tests.py
table-bookings/web/migrations/: 0003_userverification.py  0005_alter_userverification_verified_at.py  0006_userprofile_verified.py  0007_category_restaurant_restaurantimage_and_more.py  0008_recommendation.py  0010_alter_userprofile_nickname.py  0011_review_booking_review.py
table-bookings/web/static/: search.js
table-bookings/web/templates/: common.html  error.html
table-bookings/web/templatetags/: booking_tags.py  pagination_tags.py  search_tags.py
web/: admin.py  forms.py  models.py  urls.py  utils.py
web/migrations/: 0001_initial.py  0002_alter_userprofile_profile_image.py  0004_alter_userverification_key.py  0009_availableseat_booking_alter_restauranttable_weekday_and_more.py  0012_alter_restaurant_address_alter_restaurant_category_and_more.py  0013_alter_restaurant_main_image.py
web/templates/: common.html  search_bar.html
web/templatetags/: booking_tags.py  search_tags.py
web/views/: booking.py  history.py  main.py  restaurant.py  reviews.py  users.py
(+33 files in other folders)
