[tool.poetry]
name = "table-bookings"
version = "0.1.0"
description = ""
authors = ["yjinjo <yjinjo@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
python-dotenv = "1.0"
mysqlclient = "2.1.1"
Pillow = "9.5.0"
django-ses = "^3.4.1"
django-allauth = "^0.54.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
